--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,5 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
+    docker:
+      - image: circleci/openjdk:8u181-jdk
