--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,5 @@ jobs: # a collection of steps
 
       - store_artifacts: # store the uberjar as an artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: target/src/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar
+          path: target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
