--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs: # a collection of steps
 
       - run: mvn package # run the actual tests
 
-      - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
+      - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard.
           # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: target/surefire-reports
 
@@ -33,12 +33,11 @@ jobs: # a collection of steps
       - store_artifacts: # store the uberjar as an artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-deployment:
-   master:
-     branch: master
-     commands:
-       - echo 'deploying master branch'
-       - ssh -v $DROPLET_USER@$DROPLET_IP "rm FlexiPlayr*.jar"
-       - scp target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar $DROPLET_USER@$DROPLET_IP:/root/
-       - ssh -v $DROPLET_USER@$DROPLET_IP "./flexiplayr.sh"
+          deploy:
+            master:
+              branch: master
+              commands:
+                - echo 'deploying master branch'
+                - ssh -v $DROPLET_USER@$DROPLET_IP "rm FlexiPlayr*.jar"
+                - scp target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar $DROPLET_USER@$DROPLET_IP:/root/
+                - ssh -v $DROPLET_USER@$DROPLET_IP "./flexiplayr.sh"
