add known hosts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs: # a collection of steps
       - store_artifacts: # store the uberjar as an artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar
+      - run: ssh-keyscan $DROPLET_IP >> ~/.ssh/known_hosts
       - deploy:
           name: Deploy to DigitalOcean
           command: |
