--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,5 @@ jobs: # a collection of steps
             ssh -v $DROPLET_USER@$DROPLET_IP "killall java"
             ssh -v $DROPLET_USER@$DROPLET_IP "rm FlexiPlayr*.jar"
             scp target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar $DROPLET_USER@$DROPLET_IP:/root/
-            ssh -v $DROPLET_USER@$DROPLET_IP "./flexiplayr.sh &"
-            ssh -v $DROPLET_USER@$DROPLET_IP "./start.sh &"
+            ssh -v $DROPLET_USER@$DROPLET_IP "./flexiplayr.sh && disown"
+            ssh -v $DROPLET_USER@$DROPLET_IP "./start.sh && disown"
