--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2.1 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
+    branches:
+      only:
+        - master
 
     working_directory: ~/build-flexiplayr # directory where steps will run
 
@@ -38,8 +41,7 @@ jobs: # a collection of steps
           name: Deploy to DigitalOcean
           command: |
             echo 'deploying master branch'
-            ssh -v $DROPLET_USER@$DROPLET_IP "killall java"
-            ssh -v $DROPLET_USER@$DROPLET_IP "rm FlexiPlayr*.jar"
+            ssh -v $DROPLET_USER@$DROPLET_IP "killall java && rm FlexiPlayr*.jar"
             scp target/FlexiPlayr-1.0.0-SNAPSHOT-jar-with-dependencies.jar $DROPLET_USER@$DROPLET_IP:/root/
             ssh -v $DROPLET_USER@$DROPLET_IP "./flexiplayr.sh" &
             disown
