--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.8.3_464</version>
+            <version>4.BETA.0_32</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -51,12 +51,12 @@
         <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.3.17</version>
+            <version>1.3.19</version>
         </dependency>
         <dependency>
             <groupId>com.jagrosh</groupId>
             <artifactId>jda-utilities</artifactId>
-            <version>2.1.5</version>
+            <version>3.0.1</version>
             <scope>compile</scope>
             <type>pom</type>
         </dependency>
