--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <slf4jVersion>1.7.27</slf4jVersion>
+        <slf4jVersion>1.7.28</slf4jVersion>
     </properties>
 
     <repositories>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.BETA.0_32</version>
+            <version>4.0.0_51</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -46,17 +46,17 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>2.5.7</version>
+            <version>2.5.8</version>
         </dependency>
         <dependency>
             <groupId>com.sedmelluq</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>1.3.19</version>
+            <version>1.3.22.pbjtest3</version>
         </dependency>
         <dependency>
             <groupId>com.jagrosh</groupId>
             <artifactId>jda-utilities</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2</version>
             <scope>compile</scope>
             <type>pom</type>
         </dependency>
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.0-jre</version>
+            <version>28.1-jre</version>
         </dependency>
     </dependencies>
 
